prevent social from wrapping

--- a/css/property_proto.css
+++ b/css/property_proto.css
@@ -1440,7 +1440,8 @@ margin-top: 25px;
   }
   
   #social i {
-    margin-left: 10px;
+    font-size: 18px;
+    margin-left: 7px;
   }
   
   .ta-rating-full,
